
- Added new commands ~transient-scroll-up~ and ~transient-scroll-down~,
  which scroll the transient window.  ~C-v~ and ~M-v~ (and ~<next>~ and
  ~<prior>~) are bound to these commands.  These keys were choosen they
  are bound to scrolling commands in the global map too.  This made
  it necessary to find a new binding for ~transient-show~, which ~C-t~ is
  bound to now.  #17

- The window that was selected before the transient window was shown
  is no longer re-selected before calling a suffix that exits the
  transient.  If a suffix changes the selected window unintentionally,
  then that is a bug.  This makes it possible to intentionally change
  the window layout using transients.

- An infix is a special kind of suffix.  Depending on context
  "suffixes" means "suffixes (including infixes)" or "non-infix
  suffixes".  This is now mention in a few places where users might
  otherwise get confused.

- Stopped claiming that the transient is shown in the "echo area",
  because technically that is not correct.  Instead talk about the
  "popup buffer".

- Fixed handling of suffix commands that are undefined at the time the
  prefix is invoked.  This is still an error, but the error message
  now explains what is wrong.  a729bbb

- Fixed saving values/history/levels, making sure that the printed
  expression is never abbreviated.  #15

- Fixed jumping to the correct place in a manpage when showing the
  documentation for an infix argument.  c4bf4af

- Bound ~ESC ESC ESC~ to ~transient-quit-all~ because the convention is
  that it should be possible to exit any temporary state using this
  binding.  #12

- Fixed referencing suffix bindings by their key when the key binding
  is defined in the suffix object instead of in the suffix spec.
  e4ffb97

- Remove trailing whitespace from popup text for the benefit of users
  who have set enabled ~show-trailing-whitespace~ globally.  0758efa

- Fixed showing available bindings on a single line instead of using